// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when boolean prop "sayHello" is set to: "false" 1`] = `
<div>
  <h1>
    jest-auto-snapshots String Fixture
  </h1>
  <div>
    <NodeFixture />
  </div>
  <button
    onClick={[Function]}
  >
    button
  </button>
  jest-auto-snapshots String Fixture
  1
  'News'
</div>
`;

exports[`when passed all props 1`] = `
<div>
  <h1>
    jest-auto-snapshots String Fixture
  </h1>
  <span>
    Hello!
  </span>
  <div>
    <NodeFixture />
  </div>
  <button
    onClick={[Function]}
  >
    button
  </button>
  jest-auto-snapshots String Fixture
  1
  'News'
</div>
`;

exports[`when passed only required props 1`] = `
<div>
  <h1>
    jest-auto-snapshots String Fixture
  </h1>
  <div>
    <NodeFixture />
  </div>
  <button
    onClick={[Function]}
  >
    button
  </button>
  999
  'News'
</div>
`;
